Geminiが作ったページを人力で修正

--- a/index.html
+++ b/index.html
@@ -5,129 +5,245 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Moriy - The Deep Fact</title>
     <link rel="shortcut icon" href="promote/iconimage_moriy_512x512.png">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./nes@2.3.0.min.css" rel="stylesheet">
     <style>
+        @font-face {
+            font-family: 'NuMochi';
+            src: url(./assets/font/NuKinakoMochi-Reg.otf);
+        }
+
         body {
-            background-color: #1a1a1a; /* Dark background */
+            font-family: 'NuMochi', 'Arial', sans-serif;
+            font-size: 1.5rem;
+            image-rendering: pixelated;
+            background-color: rgb( 2, 8,16);
             color: #f8f9fa; /* Light text */
-            font-family: 'Arial', sans-serif;
+            line-height: 2.5rem;
+            user-select: none;
+        }
+        section.inserted-message {
+            margin: 1rem auto;
+            padding: 1rem 2rem;
         }
         .hero-section {
             background: url('promote/titleimage_moriy.png') no-repeat center center;
             background-size: cover;
-            height: 60vh;
+            height: 55vh;
             display: flex;
             align-items: center;
             justify-content: center;
             color: white;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         }
-        .hero-section h1 {
-            font-size: 4rem;
+        .hero-section a.nes-btn{
+            margin-top: 40vh;
+        }
+        .play-button {
+            text-align: center;
+            margin-top: 1rem;
+            margin-bottom: 2rem;
+        }
+        a.nes-btn.goto-game {
+            font-size: 2rem;
             font-weight: bold;
         }
-        .section-title {
+        h1 {
+            font-size: 1rem;
+            text-align: center;
+        }
+        h2.section-title {
             color: #007bff; /* Blue for titles */
-            margin-bottom: 1.5rem;
+            margin-top: 3rem;
+            margin-bottom: 3rem;
+            text-align: center;
+        }
+        h3.section-subtitle {
+            color: #9fb6d2; /* Blue for titles */
+            margin-top: 2rem;
+            margin-bottom: 2rem;
+            text-align: center;
         }
         .container {
-            padding-top: 3rem;
-            padding-bottom: 3rem;
+            padding: 3rem 1.5rem;
         }
-        .btn-play {
-            font-size: 1.5rem;
-            padding: 0.8rem 2rem;
-            border-radius: 50px;
+        .side-container{
+            overflow: auto;
+            scrollbar-color: rgb( 8,32,64) rgb( 2, 8,16);
+            scrollbar-width: thin;
+            display: grid;
+            gap: 1rem;
+            grid-template-columns: 2rem 1fr 1fr 1fr 2rem;
+        }
+        .side-container img {
+            margin: 0;
+            display: block;
+            border: solid 1px #5a5764;
+            width: 100vw;
+            min-width: 320px;
+            max-width: 640px;
+        }
+        dl > dt {
+            display: inline;
+            font-weight: bold;
+            color: #ffda7e;
+        }
+        dl > dt::after {
+            content: ' : ';
+        }
+        dl > dd {
+            display: inline;
+            margin-right: 1rem;
+        }
+        a {
+            word-break: break-all;
         }
         footer {
             background-color: #0d0d0d;
             color: #adb5bd;
             padding: 2rem 0;
             font-size: 0.9rem;
+            text-align: center;
         }
     </style>
 </head>
 <body>
 
+    <section class="top">
+        <div>
+            <h1>
+                <span class="">Moriy - The Deep Fact</span>
+            </h1>
+        </div>
+    </section>
     <header class="hero-section">
-        <div class="text-center">
-            <h1>Moriy - The Deep Fact</h1>
-            <p class="lead">謎を解き明かし、真実へ辿り着け</p>
-            <a href="pwa.html" class="btn btn-primary btn-lg btn-play mt-4">今すぐプレイ</a>
+        <div>
+            <a href="pwa.html" class="nes-btn is-primary goto-game">
+                <span>今すぐプレイ</span>
+            </a>
         </div>
     </header>
 
-    <main>
-        <section id="about" class="container">
-            <h2 class="section-title text-center">ゲーム紹介</h2>
-            <div class="row">
-                <div class="col-md-8 offset-md-2 text-center">
-                    <p>初めてスマホ向けに作った「Moriy - the deep fact」をブラウザゲームとして復刻しました。</p>
-                    <p>ワタシにしては珍しく自動生成ではなくステージクリア型の謎解きゲームです。毎夜作っては会社の先輩にプレイしてもらってました。</p>
-                    <p>各ステージの謎を解き明かしてゴールを目指してください。クリア条件はステージごとに異なります。</p>
-                </div>
-            </div>
-        </section>
+    <div id="about" class="container">
 
-        <section id="screenshots" class="container bg-dark py-5">
-            <h2 class="section-title text-center">スクリーンショット</h2>
-            <div class="row">
-                <!-- Screenshots will be dynamically added here -->
-                <div class="col-md-4 mb-4">
-                    <img src="promote/screenshot_2013-01-06_1853.png" class="img-fluid rounded shadow" alt="Screenshot 1">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="promote/screenshot_2013-01-06_1854.png" class="img-fluid rounded shadow" alt="Screenshot 2">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="promote/screenshot_2013-01-06_2122.png" class="img-fluid rounded shadow" alt="Screenshot 3">
-                </div>
-            </div>
-        </section>
+        <h2 class="section-title">ゲーム しょうかい</h2>
+        <div class="nes-container is-rounded is-dark">
+            <p>
+                <strong>Moriy</strong>は ブラウザ で あそべる ファンタジー アクション パズル ゲーム です。
+                しゅじんこう ヨシュナ と せかい の ひみつ を 解き明かそう。
+            </p>
+        </div>
 
-        <section id="how-to-play" class="container">
-            <h2 class="section-title text-center">遊び方</h2>
-            <div class="row">
-                <div class="col-md-8 offset-md-2">
-                    <ul>
-                        <li>操作は左右と上（ジャンプ）のみです。</li>
-                        <li>スマートフォンの場合、タッチした位置に仮想パッドが現れますが、PCのカーソルキーの方がはるかに遊びやすいです。</li>
-                        <li>ゲーム中、音が重要なヒントになります。音が出せる環境でお楽しみください。</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
+        <h3 class="section-subtitle">インストール と すいしょう かんきょう</h3>
+        <p>
+            ブラウザ だけで あそべます。
+            インストール すれば オフライン プレイ できます
+            （PC での プレイ を すいしょう）。
+            音が じゅうような ヒント です。
+            音が だせる ばしょ で おたのしみ ください。
+        </p>
 
-        <section id="credits" class="container bg-dark py-5">
-            <h2 class="section-title text-center">クレジット</h2>
-            <div class="row">
-                <div class="col-md-6">
-                    <h4>ライブラリ、素材</h4>
-                    <ul>
-                        <li>画像素材: First Seed Material</li>
-                        <li>効果音素材: <a href="http://osabisi.sakura.ne.jp/m2/" target="_blank" class="text-info">ザ・マッチメイカァズ</a></li>
-                        <li>ロゴジェネレータ: <a href="https://supalogo.com/" target="_blank" class="text-info">Supalogo</a></li>
-                        <li>ゲームエンジン: <a href="https://github.com/wise9/enchant.js" target="_blank" class="text-info">enchant.js</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-6">
-                    <h4>開発</h4>
-                    <ul>
-                        <li>ソースコード: <a href="https://github.com/yamahei/enchant_moriy" target="_blank" class="text-info">yamahei/enchant_moriy | GitHub</a></li>
-                        <li>テキストエディタ: <a href="https://atom.io/" target="_blank" class="text-info">Atom</a></li>
-                        <li>画像編集: <a href="https://www.gimp.org/" target="_blank" class="text-info">GIMP</a></li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-    </main>
+        <h3 class="section-subtitle">スクリーン ショット</h3>
+        <div class="side-container">
+            <p></p>
+            <img src="promote/localhost_4567_stage01.html.png" alt="Screenshot 2" class="img-fluid">
+            <img src="promote/localhost_4567_stage03.html.png" alt="Screenshot 3" class="img-fluid">
+            <img src="promote/localhost_4567_stage05.html.png" alt="Screenshot 1" class="img-fluid">
+            <p></p>
+        </div>
 
-    <footer class="text-center">
+        <h3 class="section-subtitle">そうさ ほうほう</h3>
+        <dl>
+            <dt>キャラクター そうさ</dt>
+            <dd>左・右・上（ジャンプ）</dd>
+            <dt>エピソード せんたく</dt>
+            <dd>上・下・Enter</dd>
+            <dt>エピソード かいし しゅうりょう</dt>
+            <dd>クリック</dd>
+            <dt>ストーリー</dt>
+            <dd>クリック（早おくり）・ダブルクリック（スキップ）</dd>
+        </dl>
+
+    </div>
+    <div class="play-button">
+        <a href="pwa.html" class="nes-btn is-primary goto-game">
+            <span>今すぐプレイ</span>
+        </a>
+    </div>
+
+    <!-- <div id="story" class="container">
+        <h2 class="section-title">ストーリー</h2>
+        <div class="nes-container is-rounded is-dark">
+            <p>
+                ヨシュナ の しんえいたいちょう ばってき と 時を 同じくして
+                王国 に やくさい が はびこり はじめた。
+            </p>
+        </div>
+        <div class="nes-container is-rounded is-dark">
+            <p>
+                ひとびと は
+                光の めがみ ライラ の かげり
+                と
+                ヤミの 女王 アリル の ふっかつ
+                を
+                よかん した。
+            </p>
+        </div>
+        <div class="nes-container is-rounded is-dark">
+            <p>
+                ヨシュナ よ。<br/>
+                そなた も かんじて おる じゃろう。
+                この まがまがしく も きょうだい な ヤミを。
+            </p>
+        </div>
+    </div> -->
+
+
+    <div id="development" class="container">
+        <h2 class="section-title">かいはつ</h2>
+
+        <div class="nes-container is-rounded is-dark">
+            <p>
+                <strong>Moriy</strong>は ソース コード を こうかい してます。
+                みんな も ゲーム つくろうぜ。
+            </p>
+        </div>
+
+        <h3 class="section-subtitle">クレジット</h3>
+        <dl>
+            <dt>がぞう</dt>
+            <dd>First Seed Material</dd>
+            <dt>こうかおん</dt>
+            <dd>
+                <a href="http://osabisi.sakura.ne.jp/m2/" target="_blank">ザ・マッチメイカァズ</a>
+            </dd>
+            <dt>ロゴ</dt>
+            <dd>
+                <a href="https://supalogo.com/" target="_blank">Supalogo</a>
+            </dd>
+            <dt>フォント</dt>
+            <dd>
+                <a href="https://booth.pm/ja/items/1761323" target="_blank">Nu もち</a>
+            </dd>
+            <dt>エンジン</dt>
+            <dd>
+                <a href="https://github.com/wise9/enchant.js" target="_blank">enchant.js</a>
+            </dd>
+        </dl>
+
+        <h3 class="section-subtitle">ソースコード</h3>
+        <ul>
+            <li>
+                <a href="https://github.com/yamahei/enchant_moriy" target="_blank">
+                    <span>yamahei</span>/<span>enchant_moriy</span>
+                </a>
+            </li>
+        </ul>
+
+    </div>
+
+    <footer>
         <p>&copy; 2025 Moriy - The Deep Fact. All rights reserved.</p>
     </footer>
 
-    <!-- Bootstrap JS and Popper.js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
