トップページの作業漏れ #13 description、keyword

--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
+
+    <meta property="og:site_name" content="Moriy - The Deep Fact">
+    <meta property="og:title" content="Moriy - The Deep Fact">
+    <meta property="og:description" content="Moriy は ブラウザ で あそべる ファンタジー アクション パズル ゲーム です。しゅじんこう ヨシュナ と せかい の ひみつ を 解き明かそう。">
+    <meta property="og:url" content="https://yamahei.github.io/enchant_moriy/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="promote/iconimage_moriy_512x512.png">
+    <meta name="twitter:card" content="summary">
+    <!-- <meta name="twitter:site" content="@twitterid"> -->
+    <meta name="fb:app_id" content="1272285484403078">
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Moriy - The Deep Fact</title>
     <link rel="shortcut icon" href="promote/iconimage_moriy_512x512.png">
