トップページの作業漏れ #13 index.htmlにもっと画像を使う

--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
             margin-bottom: 2rem;
             text-align: center;
         }
+        h3.section-subtitle > img.title-img {
+            height: 3rem;
+            margin-top: 1rem;
+            margin-bottom: 2rem;
+            border: 4px solid #5a5764; /* Blue border for title image */
+        }
         .container {
             padding: 3rem 1.5rem;
         }
@@ -136,7 +142,9 @@
 
     <div id="about" class="container">
 
-        <h2 class="section-title">ゲーム しょうかい</h2>
+        <h2 class="section-title">
+            ゲーム しょうかい
+        </h2>
         <div class="nes-container is-rounded is-dark">
             <p>
                 <strong>Moriy</strong>は ブラウザ で あそべる ファンタジー アクション パズル ゲーム です。
@@ -144,7 +152,10 @@
             </p>
         </div>
 
-        <h3 class="section-subtitle">インストール と すいしょう かんきょう</h3>
+        <h3 class="section-subtitle">
+            <img src="siteimg/epimg_brightness.png" class="title-img"/><br/>
+            インストール と すいしょう かんきょう
+        </h3>
         <p>
             ブラウザ だけで あそべます。
             インストール すれば オフライン プレイ できます
@@ -153,7 +164,10 @@
             音が だせる ばしょ で おたのしみ ください。
         </p>
 
-        <h3 class="section-subtitle">スクリーン ショット</h3>
+        <h3 class="section-subtitle">
+            <img src="siteimg/epimg_epilogue.png" class="title-img"/><br/>
+            スクリーン ショット
+        </h3>
         <div class="side-container">
             <p></p>
             <img src="promote/localhost_4567_stage01.html.png" alt="Screenshot 2" class="img-fluid">
@@ -162,7 +176,10 @@
             <p></p>
         </div>
 
-        <h3 class="section-subtitle">そうさ ほうほう</h3>
+        <h3 class="section-subtitle">
+            <img src="siteimg/epimg_forecourt.png" class="title-img"/><br/>
+            そうさ ほうほう
+        </h3>
         <dl>
             <dt>キャラクター そうさ</dt>
             <dd>左・右・上（ジャンプ）</dd>
@@ -210,7 +227,9 @@
 
 
     <div id="development" class="container">
-        <h2 class="section-title">かいはつ</h2>
+        <h2 class="section-title">
+            かいはつ
+        </h2>
 
         <div class="nes-container is-rounded is-dark">
             <p>
@@ -219,7 +238,10 @@
             </p>
         </div>
 
-        <h3 class="section-subtitle">クレジット</h3>
+        <h3 class="section-subtitle">
+            <img src="siteimg/epimg_maze.png" class="title-img"/><br/>
+            クレジット
+        </h3>
         <dl>
             <dt>がぞう</dt>
             <dd>First Seed Material</dd>
@@ -241,7 +263,10 @@
             </dd>
         </dl>
 
-        <h3 class="section-subtitle">ソースコード</h3>
+        <h3 class="section-subtitle">
+            <img src="siteimg/epimg_core.png" class="title-img"/><br/>
+            ソース コード
+        </h3>
         <ul>
             <li>
                 <a href="https://github.com/yamahei/enchant_moriy" target="_blank">
