トップページの作業漏れ #13 pwaインストール誘導の改善 あとfaviconとかselect.htmlの高さとか、細かい修正

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Moriy - The Deep Fact</title>
     <link rel="shortcut icon" href="promote/iconimage_moriy_512x512.png">
+    <link rel="icon" href="promote/iconimage_moriy_512x512.png"></link>
     <link href="./nes@2.3.0.min.css" rel="stylesheet">
     <style>
         @font-face {
