--- a/select.html
+++ b/select.html
@@ -5,6 +5,7 @@
     <!-- <script type="text/javascript" src="plugins/plugin-loader.js"></script>
     <link rel="stylesheet" href="plugins/plugin-loader.css" /> -->
     <link rel="shortcut icon" href="promote/iconimage_moriy_512x512.png"></link>
+    <link rel="icon" href="promote/iconimage_moriy_512x512.png"></link>
     <link rel="stylesheet" href="./bitfont.css" />
 
     <!-- PWA -->
@@ -226,8 +227,7 @@
           scrollbar-width: thin;
         }
         ul#episodes .margin{
-          /* height:50vh; */
-          height: calc(100vw * 0.48 * 0.5);/* 400:192 / 2 = 96 */
+          height: calc(100vw * 0.16);
           margin:0; padding: 0;
           list-style-type: none;
         }
@@ -245,7 +245,7 @@
         }
         .episode.unlock:focus{
           border: none;
-          background-color:#101; 
+          background-color:#101;
         }
         .episode:not(.unlock) img{
           filter: grayscale(1);
