トップページの作業漏れ #13 高難易度であることの説明を追加

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta property="og:site_name" content="Moriy - The Deep Fact">
     <meta property="og:title" content="Moriy - The Deep Fact">
-    <meta property="og:description" content="Moriy は ブラウザ で あそべる ファンタジー アクション パズル ゲーム です。しゅじんこう ヨシュナ と せかい の ひみつ を 解き明かそう。">
+    <meta property="og:description" content="Moriy は ブラウザ で あそべる ファンタジー アクション ゲキムズ パズル ゲーム です。しゅじんこう ヨシュナ と せかい の ひみつ を 解き明かそう。ツワモノ の ちょうせん を まってるぞ。">
     <meta property="og:url" content="https://yamahei.github.io/enchant_moriy/">
     <meta property="og:type" content="website">
     <meta property="og:image" content="promote/iconimage_moriy_512x512.png">
@@ -79,7 +79,7 @@
             height: 3rem;
             margin-top: 1rem;
             margin-bottom: 2rem;
-            border: 4px solid #5a5764; /* Blue border for title image */
+            border: 3px solid #5a5764; /* Blue border for title image */
         }
         .container {
             padding: 3rem 1.5rem;
@@ -115,6 +115,9 @@
         a {
             word-break: break-all;
         }
+        strong {
+            color: #ef5e51; /* Yellow for strong emphasis */
+        }
         footer {
             background-color: #0d0d0d;
             color: #adb5bd;
@@ -148,8 +151,9 @@
         </h2>
         <div class="nes-container is-rounded is-dark">
             <p>
-                <strong>Moriy</strong>は ブラウザ で あそべる ファンタジー アクション パズル ゲーム です。
+                Moriy は ブラウザ で あそべる ファンタジー アクション <strong>ゲキムズ</strong> パズル ゲーム です。
                 しゅじんこう ヨシュナ と せかい の ひみつ を 解き明かそう。
+                ツワモノ の ちょうせん を まってるぞ。
             </p>
         </div>
 
@@ -159,10 +163,12 @@
         </h3>
         <p>
             ブラウザ だけで あそべます。
-            インストール すれば オフライン プレイ できます
-            （PC での プレイ を すいしょう）。
+            インストール すれば オフライン プレイ できます。
             音が じゅうような ヒント です。
             音が だせる ばしょ で おたのしみ ください。
+        </p>
+        <p>
+            <strong>＊</strong>PC での プレイ を すいしょう します。
         </p>
 
         <h3 class="section-subtitle">
@@ -234,7 +240,7 @@
 
         <div class="nes-container is-rounded is-dark">
             <p>
-                <strong>Moriy</strong>は ソース コード を こうかい してます。
+                Moriy は ソース コード を こうかい してます。
                 みんな も ゲーム つくろうぜ。
             </p>
         </div>
