--- a/pwa.html
+++ b/pwa.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <!-- <script src="plugins/plugin-loader.js"></script> -->
     <link rel="shortcut icon" href="promote/iconimage_moriy_512x512.png"></link>
     <link rel="icon" href="promote/iconimage_moriy_512x512.png"></link>
