--- a/story.html
+++ b/story.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <!-- <script type="text/javascript" src="plugins/plugin-loader.js"></script>
     <link rel="stylesheet" href="plugins/plugin-loader.css" /> -->
     <link rel="shortcut icon" href="promote/iconimage_moriy_512x512.png"></link>
