--- a/select.html
+++ b/select.html
@@ -238,6 +238,7 @@
           margin:0; padding: 0;
           margin-top: calc(var(--font-size) * 1.5);
           margin-bottom: calc(var(--font-size) * 1.5);
+          margin-right: calc(var(--font-size) * 0.5);
         }
         .episode.unlock{
           cursor: pointer;
