謝辞を追加

--- a/index.html
+++ b/index.html
@@ -284,6 +284,14 @@
 
     </div>
 
+    <div id="acknowledgment" class="container">
+        <div class="nes-container is-rounded is-dark">
+            <p>
+                この 作品 を 川口 セイシュウ 氏 に ささげます。
+            </p>
+        </div>
+    </div>
+
     <footer>
         <p>&copy; 2025 Moriy - The Deep Fact. All rights reserved.</p>
     </footer>
