パッドの操作性（ジャンプ入力）を改善

--- a/index.html
+++ b/index.html
@@ -167,9 +167,6 @@
             音が じゅうような ヒント です。
             音が だせる ばしょ で おたのしみ ください。
         </p>
-        <p>
-            <strong>＊</strong>PC での プレイ を すいしょう します。
-        </p>
 
         <h3 class="section-subtitle">
             <img src="siteimg/epimg_epilogue.png" class="title-img"/><br/>
@@ -197,6 +194,9 @@
             <dt>ストーリー</dt>
             <dd>クリック（早おくり）・ダブルクリック（スキップ）</dd>
         </dl>
+        <p>
+            <strong>＊</strong>スマートフォン の ばあい： がめん の 両サイド を タップ すると 左右 に いどう 同時 タップ で ジャンプ
+        </p>
 
     </div>
     <div class="play-button">
