--- a/story.html
+++ b/story.html
@@ -504,9 +504,11 @@
         それが まこと で あれば じいん は いつわり の きょうぎ を といて いるの ですか ?
         やくさい は にんげん が ひきおこし て きた もの なの ですか ?
       </p>
+      <p><br/></p>
       <p>
-        なぜ ... なぜ ... 。<br/>
-        なぜ それを ヨシュナ に はなす の ですか ?
+        ヨシュナ よ。
+        ぎょうしゅく された ヤミ の しょうき に きを つけよ。
+        ライラ は けっして てき では ない が ゆだん すると ふきとばされて しまうぞ。
       </p>
     </section>
     <section id="stage10:Lyra" class="story bitfont">
