--- a/story.html
+++ b/story.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="./bitfont.css" />
 
     <!-- PWA -->
-    <link rel="manifest" href="manifest.webmanifest"></link>
-    <script type="text/javascript" src="./registpwa.js"></script>
+    <!-- <link rel="manifest" href="manifest.webmanifest"></link>
+    <script type="text/javascript" src="./registpwa.js"></script> -->
 
     <script type="text/javascript">
       const episodes = [
