--- a/select.html
+++ b/select.html
@@ -242,6 +242,7 @@
             font-size: small;
             text-align: center;
             margin-top: 0;
+            white-space: nowrap;
         }
         div.side.left #util span {
             color: silver;
