--- a/select.html
+++ b/select.html
@@ -239,15 +239,16 @@
           width: calc(var(--font-size) * 10);
         }
         div.side.left #util {
-            font-size: small;
-            text-align: center;
-            margin-top: 0;
-            white-space: nowrap;
+          font-size: small;
+          text-align: center;
+          margin-top: 0;
+          white-space: nowrap;
         }
         div.side.left #util span {
-            color: silver;
-            margin: 0 0.5rem;
-            cursor: pointer;
+          display: inline-block;
+          color: silver;
+          margin: 0 0.5rem;
+          cursor: pointer;
         }
         div.side.left #install {
           display: none;
