--- a/select.html
+++ b/select.html
@@ -239,7 +239,7 @@
           width: calc(var(--font-size) * 10);
         }
         div.side.left #util {
-          font-size: small;
+          font-size: 0.5rem;
           text-align: center;
           margin-top: 0;
           white-space: nowrap;
@@ -247,7 +247,7 @@
         div.side.left #util span {
           display: inline-block;
           color: silver;
-          margin: 0 0.5rem;
+          margin: 0 0.25rem;
           cursor: pointer;
         }
         div.side.left #install {
