--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <p></p>
         </div>
 
-        <h3 class="section-subtitle">
+        <h3 id="usage" class="section-subtitle">
             <img src="siteimg/epimg_forecourt.png" class="title-img"/><br/>
             そうさ ほうほう
         </h3>
